Fix Get Started button color on dark mode

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -51,10 +51,12 @@
 }
 
 .getStarted {
+  color: #000 !important;
   background-color: #eee;
 }
 
 .getStarted:hover {
+  color: #000 !important;
   background-color: #fff;
 }
 
